Fix a number of CSS problems in neatline/FIB
Stylus source files had been edited without recompiling and/or
the css file was being edited directly. Recompiles the style.css
from source. Made the following changes to the map:

- Fix problems with certain CSS not overriding global CSS/neatline
- Don't override the title color (was showing up as yellow)
- Take up full screen width
- Narrative: Delete space that previously occupied by the header
- Narrative: Only show scrollbar if necessary
- Narrative: Take up full vertical space within the map
- Reposition zoom buttons to right of narrative
- Have bubble content use same color scheme as narrative
    - Font still different, may want to make it the same
    - white with dark colored background was Neatline defaults

--- a/neatline/exhibits/themes/fish-in-a-barrel-manufacturing-in-fremont/assets/stylesheets/bubble.styl
+++ b/neatline/exhibits/themes/fish-in-a-barrel-manufacturing-in-fremont/assets/stylesheets/bubble.styl
@@ -1,9 +1,8 @@
 
 /* vim: set expandtab tabstop=2 shiftwidth=2 softtabstop=2 cc=80; */
 
-div.bubble.static
+#static-bubble
 
-  position fixed
   right 20px
   left auto
   font-family Oswald
