--- a/neatline/exhibits/themes/fish-in-a-barrel-manufacturing-in-fremont/assets/stylesheets/zoom.styl
+++ b/neatline/exhibits/themes/fish-in-a-barrel-manufacturing-in-fremont/assets/stylesheets/zoom.styl
@@ -4,8 +4,8 @@
 #zoom
 
   position absolute
-  left $text-width + 20
-  top 50px
+  left $text-width + 5px
+  top 5px
 
   .btn
 
